<resources>
    <string name="app_name">Velez</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Juegos</string>
    <string name="make_your_team">Tu equipo</string>
    <string name="market">Tienda</string>
    <string name="tickets">Tu Entrada</string>
    <string name="match">Partidos</string>
    <string name="mvp">La Figura</string>
    <string name="fans">Fortiner@s</string>
    <string name="title_sign_out">Cerrar sesión</string>
    <string name="account">Cuenta</string>
    <string name="user_config">Perfil</string>

    <string name="bassedas_name">Christian Bassedas</string>
    <string name="bassedas_email">c.bassedas@velez.com.ar</string>


</resources>