<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_game"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="@string/match">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_your_team"
                    android:icon="@drawable/ic_team"
                    android:title="@string/make_your_team" />
                <item
                    android:id="@+id/nav_mvp"
                    android:icon="@drawable/ic_mvp"
                    android:title="@string/mvp" />
            </group>

        </menu>
    </item>

    <item android:title="@string/fans">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tickets"
                    android:icon="@drawable/ic_ticket"
                    android:title="@string/tickets" />
                <item
                    android:id="@+id/nav_store"
                    android:icon="@drawable/ic_store"
                    android:title="@string/market" />
            </group>
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_user"
                    android:icon="@drawable/ic_user"
                    android:title="@string/user_config"/>

                <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_logout"
                android:title="@string/title_sign_out" />

            </group>
        </menu>
    </item>

</menu>